5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1601_2043.log
== TEST (2019-03-28 22:33:27) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:38:28) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4

m = nota1 * p1 = nota2 * p2 + nota3 * p3 + nota4 * p4
n = p1 + p2 + p3 + p4

media = m//n

print(round(media, 2))
-- ERROR:
File "XXXX", line 10
    m = nota1 * p1 = nota2 * p2 + nota3 * p3 + nota4 * p4
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:38:47) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4

m = nota1 * p1 + nota2 * p2 + nota3 * p3 + nota4 * p4
n = p1 + p2 + p3 + p4

media = m//n

print(round(media, 2))
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 22:39:06) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4

m = nota1 * p1 + nota2 * p2 + nota3 * p3 + nota4 * p4
n = p1 + p2 + p3 + p4

media = m//n

print(round(media, 2))
-- EXECUTION TIME:
0.148369
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:39:15) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4

m = nota1 * p1 + nota2 * p2 + nota3 * p3 + nota4 * p4
n = p1 + p2 + p3 + p4

media = m//n

print(round(media, 2))
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:39:21) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4

m = nota1 * p1 + nota2 * p2 + nota3 * p3 + nota4 * p4
n = p1 + p2 + p3 + p4

media = m//n

print(round(media, 2))
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 22:40:57) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4

m = nota1 * p1 + nota2 * p2 + nota3 * p3 + nota4 * p4
n = p1 + p2 + p3 + p4

media = m/n

print(round(media, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 22:41:16) 
-- CODE:
nota1 = float(input("digite a nota"))
nota2 = float(input("digite a note"))
nota3 = float(input("digite a nota"))
nota4 = float(input("digite a nota"))
p1 = 1
p2 = 2
p3 = 3
p4 = 4

m = nota1 * p1 + nota2 * p2 + nota3 * p3 + nota4 * p4
n = p1 + p2 + p3 + p4

media = m/n

print(round(media, 2))
-- EXECUTION TIME:
0.137304
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
